--- a/bot/config.json
+++ b/bot/config.json
@@ -15,12 +15,43 @@
     "G1",
     "G2"
   ],
+  "mongodb": {
+    "db": "candles",
+    "ip": "147.93.7.253",
+    "port": 27017,
+    "username": "mongodb",
+    "password": "3ReSGpsD6TFDF5ww"
+  },
   "settings": {
     "rsi_period": 14,
-    "rsi_oversold": 30,
-    "rsi_overbought": 70,
-    "ma_period": 20,
-    "signal_cooldown": 120,
-    "expiration_minutes": 1
+    "rsi_oversold": 25,
+    "rsi_overbought": 75,
+    "ma_period": 21,
+    "signal_cooldown": 180,
+    "expiration_minutes": 1,
+    "macd_fast": 12,
+    "macd_slow": 26,
+    "macd_signal": 9,
+    "bb_period": 20,
+    "bb_deviation": 2,
+    "min_quality_score": 6,
+    "volatility_filter": true,
+    "trend_filter": true
+  },
+  "advanced": {
+    "adaptive_rsi": true,
+    "multi_timeframe": true,
+    "market_session_filter": true,
+    "max_signals_per_hour": 3,
+    "blackout_hours": [
+      22,
+      23,
+      0,
+      1,
+      2,
+      3,
+      4,
+      5
+    ]
   }
 }
