--- a/bot/config.json
+++ b/bot/config.json
@@ -1,4 +1,11 @@
 {
+  "mongodb": {
+    "ip": "147.93.7.253",
+    "port": 27017,
+    "username": "mongodb",
+    "password": "3ReSGpsD6TFDF5ww",
+    "db": "candles"
+  },
   "telegram": {
     "bot_token": "8116318094:AAE5cO2UUkHO4dXgAmTcGed7OWZvJl9lPKQ",
     "chat_id": "-4800412307"
@@ -7,51 +14,24 @@
     "EURUSD",
     "GBPUSD",
     "USDJPY",
-    "AUDCAD",
-    "USDCAD"
+    "USDCAD",
+    "AUDCAD"
   ],
-  "gale_levels": [
-    "G0",
-    "G1",
-    "G2"
-  ],
-  "mongodb": {
-    "db": "candles",
-    "ip": "147.93.7.253",
-    "port": 27017,
-    "username": "mongodb",
-    "password": "3ReSGpsD6TFDF5ww"
-  },
   "settings": {
-    "rsi_period": 14,
-    "rsi_oversold": 25,
-    "rsi_overbought": 75,
-    "ma_period": 21,
-    "signal_cooldown": 180,
+    "rsi_period": 7,
+    "ma_period": 9,
+    "signal_cooldown": 45,
     "expiration_minutes": 1,
-    "macd_fast": 12,
-    "macd_slow": 26,
-    "macd_signal": 9,
-    "bb_period": 20,
-    "bb_deviation": 2,
-    "min_quality_score": 6,
-    "volatility_filter": true,
-    "trend_filter": true
+    "analysis_interval": 30,
+    "rsi_oversold": 28,
+    "rsi_overbought": 72,
+    "macd_positive": -0.0002,
+    "macd_negative": 0.0002
   },
-  "advanced": {
-    "adaptive_rsi": true,
-    "multi_timeframe": true,
-    "market_session_filter": true,
-    "max_signals_per_hour": 3,
-    "blackout_hours": [
-      22,
-      23,
-      0,
-      1,
-      2,
-      3,
-      4,
-      5
-    ]
-  }
+  "blackout": {
+    "enabled": true,
+    "start_hour": 23,
+    "end_hour": 5
+  },
+  "one_signal_at_a_time": true
 }
